# modersite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  compose.yaml  create_repositories.py  eslint.config.mjs  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tox.ini  tsconfig.json  webpack.config.js
modersite/: __init__.py  __main__.py  admin.py  app.py  constants.py  context_processors.py  defaults.py  form_fields.py  models.py  urls.py  user_settings.py  views.py
modersite/adminactions/: __init__.py  ribbons.py
modersite/components/: listing.py
modersite/migrations/: 0001_initial.py  0002_preferencesuser_email_notifications.py  0006_alter_alertribbon_position_and_more.py
modersite/nonadmin/: __init__.py  options.py  sites.py
modersite/postman/: forms.py  urls.py
modersite/static/css/: base.css  ckeditor5.css  theme.css
modersite/static/favicon/: site.webmanifest
modersite/static/js/: app.js  app.js.map  base.js  base.js.map  main.js  main.js.map
modersite/static/translations/: bn.js  th.js
modersite/templates/: demo.html  index.html  popup_demo.html
modersite/templates/account/: password_change.html
modersite/templates/cookie_consent/: _cookie_group.html  cookiegroup_list.html
modersite/templates/django_ckeditor5/: widget.html
modersite/templates/django_ckeditor_5/: widget.html
modersite/templates/modersite/: app.html  base.html  manage_base.html  popup_app.html  popup_base.html
modersite/templates/nonadmin/: base.html  base_site.html  (+1 more)
modersite/templatetags/: __init__.py  modersite.py  pipeline_sri.py
modersite/users/: forms.py  notifications.py  urls.py  views.py
modersite_js/: _variables.scss  alpine.js  base.scss  base.ts  htmx.js  htmx.org.d.ts  index.ts
modersite_js/components/: _ckeditor5.scss  _ribbons.scss  _vsizes.scss  allauth.ts  ckeditor.ts  cookies_consent.ts  dark_mode.ts
modersite_tests/: __init__.py
(+15 files in other folders)
